--- a/public/css/CSS_yovie/style.css
+++ b/public/css/CSS_yovie/style.css
@@ -52,7 +52,7 @@ table {
 .hero{
     width: 100%;
     height: 100vh;
-    background-image: url(../Asset/Demon.png);
+    background-image: url(../../img/img_yovie/Demon.png);
     background-size: cover;
     background-position: center;
     position: relative;
