Penambahan tombol detail pada halaman activity

--- a/app/views/activity/activity.html
+++ b/app/views/activity/activity.html
@@ -149,7 +149,25 @@
         			<td><b>Gotong royong</b> adalah kegiatan yang dilakukan dengan bekerja sama untuk mencapai hasil yang diinginkan</td>
         			<td><b>Senam pagi</b> adalah suatu aktifitas yang dilakukan pada pagi hari untuk menjaga kebugaran jasmani</td>
         			<td><b>Penghijauan</b> adalah salah satu bentuk peran dalam menjaga lingkungan dengan melakukan penanaman pepohonan</td>
-        		</tr>        		
+        		</tr>
+
+        		<tr>
+        			<td>
+        				<div class="text-center">
+        					<a href="detail1.html" class="btn btn-primary btn-round">Detail</a>
+        				</div>
+        			</td>
+        			<td>
+        				<div class="text-center">
+        					<a href="detail2.html" class="btn btn-primary btn-round">Detail</a>
+        				</div>
+        			</td>
+        			<td>
+        				<div class="text-center">
+        					<a href="detail3.html" class="btn btn-primary btn-round">Detail</a>
+        				</div
+        			</td>
+        		</tr>
         	</table>
 
 			<footer class="main-footer">
