--- a/app/views/activity/detail1.html
+++ b/app/views/activity/detail1.html
@@ -150,6 +150,10 @@
         		</tr>
 
         		<tr>
+        			<td>Tanggal: </td>
+        		</tr>
+
+        		<tr>
         			<td>Waktu: 08:00 AM - selesai</td>
         		</tr>
 
