--- a/app/views/activity/detail3.html
+++ b/app/views/activity/detail3.html
@@ -148,6 +148,10 @@
         		<tr>
         			<td>Peserta: 21/30</td>
         		</tr>
+			
+			<tr>
+        			<td>Tanggal: </td>
+        		</tr>
 
         		<tr>
         			<td>Waktu: 08:00 AM - selesai</td>
