--- a/public/css/CSS_yovie/Simon.css
+++ b/public/css/CSS_yovie/Simon.css
@@ -269,7 +269,7 @@ section .color:nth-child(3)
 	position: relative;
 	width: 100%;
 	height: 100%;
-	padding: 40px;
+	padding: 30px 40px;
 
 }
 .form h2
@@ -279,7 +279,7 @@ section .color:nth-child(3)
 	font-size: 24px;
 	font-weight: 900;
 	letter-spacing: 1px;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 	padding-bottom: 10px;
 
 
